# sika-rnd-modelling-tools

./: pyproject.toml
src/sika_rnd_modelling_tools/: __init__.py  estimators.py  investigation.py  io.py  model_wrapper.py  tuning.py  types.py  utilities.py  visualisation.py
src/sika_rnd_modelling_tools/data/: encoding_defaults.json  metrics.txt  model_imports.json  model_keywords.json  model_names.json  model_optimisation_parameters.json  model_predict_proba.json  model_skl_xgb_lgb_cat.json  model_supports_nan.json  parameter_defaults.json  parameter_grids.json  scale_defaults.json
