[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sika_rnd_modelling_tools"
version = "0.0.1"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com" },
]
dependencies = [
    "numpy==1.26.4", 
    "pandas>=2.1", 
    "polars>=1.0.0", 
    "scikit-learn>=1.4.0",
    "beartype"
]
description = "Package containing useful functions for ML modelling, primarily focused on classical methods."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# Homepage = "https://github.com/SikaSIS/sika_rnd_modelling_tools"
# Issues = "https://github.com/SikaSIS/sika_rnd_modelling_tools/issues"
